--- a/7.12/game.html
+++ b/7.12/game.html
@@ -119,6 +119,7 @@ var GuaGame = function() {
         context.clearRect(0, 0, canvas.width, canvas.height)
         // draw
         g.draw()
+        log(11)
     }, 1000/30)
 
     return g
