--- a/my/打砖块/02/game.html
+++ b/my/打砖块/02/game.html
@@ -1,6 +1,9 @@
 <!-- 
 球碰到边界的计算，引入角度，把问题搞复杂化了
-确定是对的但是运行却不对，这时候应该换个实现思路
+确定是对的但是运行却不对，这时候应该换个实现思路；
+球的运动轨迹可以拆解为 x，y，
+单独考虑 x 则只需要加减一个增量
+y 同理
 
 先不管函数的实现细节，先把过程写出来：
 例如 ball 先画出来，按 f 键，再 move，这个过程的函数，先用 log 占位，之后再进行实现
