--- a/my/打砖块/03/game.html
+++ b/my/打砖块/03/game.html
@@ -14,6 +14,8 @@ todo 所有图片加载完成之后在运行游戏
 如果要加上 开始画面，游戏画面，结束画面，这些画面的逻辑复杂，不能混在一起，因此要进行场景抽象
 这些画面都是一个个场景，对每个场景进行抽象，可以实现一套代码跑多个场景
 
+如果有必要，每个场景还可以再进行逻辑拆分、场景抽象
+
  -->
 <!DOCTYPE html>
 <html lang="en">
